# raytracer-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  config.h  defines.h  error.c  error.h  game.aps  game.rc  input.c  input.h  main.c  postbuild-windows.py  setup-windows.py
.github/workflows/: cmake-single-platform.yml  linux.yml  windows.yml
Actor/: Coin.c  Coin.h  Door.c  Door.h  Goal.c  Goal.h  Laser.c  Laser.h  Physbox.c  Physbox.h  TestActor.c  TestActor.h  Trigger.c  Trigger.h
Actor/Core/: IoProxy.c  IoProxy.h  Trigger.c  Trigger.h
AssetGenerator/: genassets.py  util.py
AssetGenerator/Converter/: FileConverter.py  FontConverter.py  GLShaderConverter.py  MP3Converter.py  ModelConverter.py  OBJConverter.py  TextureConverter.py  VulkanShaderConverter.py  WAVConverter.py
Assets/: AssetReader.c  AssetReader.h  Assets.c  Assets.h  genassets.py  genassets.py.old  ldatatable.json
Assets/EditorDefs/: game.def  internal.def
Assets/font/: large.font  small.font
Assets/leveldata/: hallway.bin.bak  hub.bin.bak  test_level.bin.bak
Assets/model/: cube.model.json  eraser.model.json  leafy.model.json  quad.model.json  sky.model.json
Assets/model/cube/: cube.mtl
Assets/model/eraser/: eraser.mtl
Assets/model/leafy/: leafy.lod2.mtl
Assets/model/quad/: quad.mtl
Assets/model/sky/: sky.mtl
Assets/shader/: basic.vert  hud_color.frag  hud_textured.fsh  hud_textured.vert  wall.frag  wall.fsh  wall.vert  wall.vsh
Assets/shader/GL/: fb_blur_f.glsl  fb_blur_v.glsl  floor_f.glsl  floor_v.glsl  hud_color_f.glsl  hud_color_v.glsl  hud_textured_f.glsl  hud_textured_v.glsl  model_shaded_f.glsl  model_shaded_v.glsl  model_unshaded_f.glsl  model_unshaded_v.glsl  shadow_f.glsl  shadow_v.glsl  sky_f.glsl  sky_v.glsl  wall_f.glsl  wall_v.glsl
Assets/shader/Vulkan/: actor.frag  actor.vert  basic.frag  basic.vert  test.tesc  test.tese  ui.frag  ui.tesc  ui.tese  ui.vert  wall.frag  wall.tesc  wall.tese  wall.vert
Debug/: DPrint.c  DPrint.h  FrameBenchmark.c  FrameBenchmark.h  FrameGrapher.c  FrameGrapher.h
Docs/: Actors.md  BUILDING.LINUX.md  BUILDING.WINDOWS.md  DEBUG.md  Fonts.md  GameStates.md  Levels-Walls-Triggers.md  Levels-Walls.md
GameStates/: GEditorState.c  GEditorState.h  GLevelSelectState.c  GLevelSelectState.h  GLoadingState.c  GLoadingState.h  GLogoSplashState.c  GLogoSplashState.h  GMainState.c  GMainState.h  GMenuState.c  GMenuState.h  GOptionsState.c  GOptionsState.h  GPauseState.c  GPauseState.h
GameStates/Options/: GInputOptionsState.c  GInputOptionsState.h  GSoundOptionsState.c  GSoundOptionsState.h  GVideoOptionsState.c  GVideoOptionsState.h
Helpers/: Collision.c  Collision.h  CollisionHelper.h  CommandParser.c  CommandParser.h  CommonAssets.c  CommonAssets.h  DataReader.c  DataReader.h  Drawing.c  Drawing.h  Error.c  Error.h  Font.c  Font.h  Input.c  Input.h  LevelEntries.c  LevelEntries.h  LevelLoader.c  LevelLoader.h  List.c  List.h  MathEx.c  MathEx.h  Navigation.c  Navigation.h  PlatformHelpers.c  PlatformHelpers.h  RenderingHelpers.c  RenderingHelpers.h  TextBox.c  TextBox.h  TextInputSystem.c  TextInputSystem.h  Timing.c  Timing.h  Vulkan.c  Vulkan.h  drawing.c  (+5 more)
Helpers/Core/: AssetReader.c  AssetReader.h  DataReader.c  DataReader.h  Error.c  Error.h  Input.c  Input.h  List.c  List.h  Logging.c  Logging.h  MathEx.c  MathEx.h  PhysicsThread.c  PhysicsThread.h  Timing.c  Timing.h
Helpers/GL/: glDebug.c  glDebug.h  glHelper.c  glHelper.h
Helpers/Graphics/: Drawing.c  Drawing.h  Font.c  Font.h  RenderingHelpers.c  RenderingHelpers.h
Helpers/Graphics/GL/: GLDebug.c  GLHelper.c  GLHelper.h  GLInternal.h  glDebug.c  glHelper.c  glHelper.h
Helpers/Graphics/Vulkan/: Vulkan.c  Vulkan.h  VulkanHelpers.c  VulkanHelpers.h  VulkanInternal.c  VulkanInternal.h  VulkanMemory.c  VulkanMemory.h  VulkanResources.c  VulkanResources.h
Helpers/UI/: UiStack.c  UiStack.h
Helpers/UI/Controls/: Button.c  Button.h  Slider.c  Slider.h
SDL2/i686-w64-mingw32/include/SDL2/: SDL_hints.h
SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_rwops.h
Structs/: Actor.c  Actor.h  Camera.c  Camera.h  GlobalState.c  GlobalState.h  Level.c  Level.h  Options.c  Options.h  Ray.c  Ray.h  Trigger.c  Trigger.h  Vector2.c  Vector2.h  Vector2o.c  Vector2o.h  Wall.c  Wall.h  level.c  level.h  ray.c  ray.h  wall.c  wall.h
Structs/UI/: UiStack.c  UiStack.h
Structs/UI/Controls/: Button.c  Button.h  CheckBox.c  CheckBox.h  RadioButton.c  RadioButton.h  Slider.c  Slider.h  TextBox.c  TextBox.h
actor/: TestActor.c
assets/: assets.c  assets.h  genassets.py
lib/zlib/: CONTROL
libactor/: libactor.c
zlib/: BUILD_INFO
